turtleart.circleying.CircleYing.scala.error
Compilation error:
CircleYing:5: error: not found: value k
  while(k<180){
        ^CircleYing:8: error: not found: value k
    k = k+1
    ^